// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshots 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2::-webkit-calendar-picker-indicator {
  display: none;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      className="c2"
      defaultValue=""
      id="input-1"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2::-webkit-calendar-picker-indicator {
  display: none;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  bottom: 10px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      className="c2"
      defaultValue="foo"
      id="input-2"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
    
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3"
      description=""
      onClick={[Function]}
      style={
        Object {
          "color": "",
        }
      }
    >
      cancel
    </span>
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  display: block;
  margin-bottom: 5px;
  margin-bottom: 0;
  padding: 8px 12px 0px;
  font-weight: bold;
}

.c3 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c3:hover,
.c3:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c3::-webkit-calendar-picker-indicator {
  display: none;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="input-3"
  >
    Text label
  </label>
  
  <div
    className="c2"
  >
    <input
      className="c3"
      defaultValue=""
      id="input-3"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 4`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  border-color: #ff2d4d;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2:hover,
.c2:focus {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2::-webkit-calendar-picker-indicator {
  display: none;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  bottom: 10px;
  color: #ff2d4d;
}

.c4 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  padding: 8px 12px 0px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      className="c2"
      defaultValue=""
      id="input-4"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3"
      description=""
      style={
        Object {
          "color": "",
        }
      }
    >
      error
    </span>
  </div>
  
  <div
    className="c4"
  >
    Error message
  </div>
</div>
`;

exports[`Input component should match snapshots 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2::-webkit-calendar-picker-indicator {
  display: none;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      className="c2"
      defaultValue=""
      id="input-5"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={true}
      type="text"
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c3 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  padding: 10px 42px;
}

.c3:hover,
.c3:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c3::-webkit-calendar-picker-indicator {
  display: none;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  bottom: 10px;
  left: 12px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c2"
      description=""
      style={
        Object {
          "color": "",
        }
      }
    >
      search
    </span>
    <input
      className="c3"
      defaultValue=""
      id="input-6"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={false}
      type="search"
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2::-webkit-calendar-picker-indicator {
  display: none;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      className="c2"
      defaultValue=""
      disabled={true}
      id="input-7"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 8`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2::-webkit-calendar-picker-indicator {
  display: none;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c3 {
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  padding: 8px 12px 0px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      className="c2"
      defaultValue=""
      id="input-8"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
    
  </div>
  <span
    className="c3"
  >
    this is a helper text
  </span>
  
</div>
`;

exports[`Input component should match snapshots 9`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c3 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c3:hover,
.c3:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c3::-webkit-calendar-picker-indicator {
  display: none;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0px 12px;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  
  <span
    className="c1"
  >
    this is a description label
  </span>
  <div
    className="c2"
  >
    <input
      className="c3"
      defaultValue=""
      id="input-9"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={false}
      type="text"
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 10`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  padding: 10px 42px;
}

.c4:hover,
.c4:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c4[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c4::-webkit-calendar-picker-indicator {
  display: none;
}

.c4:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  bottom: 10px;
  left: 12px;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0px 12px;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  
  <span
    className="c1"
  >
    this is a description label
  </span>
  <div
    className="c2"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3"
      description="this is a description label"
      style={
        Object {
          "color": "",
        }
      }
    >
      search
    </span>
    <input
      className="c4"
      defaultValue=""
      id="input-10"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      required={false}
      type="search"
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 11`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  color: #999999;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2::-webkit-calendar-picker-indicator {
  display: none;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      className="c2"
      defaultValue=""
      id="input-11"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="this input has a placeholder"
      required={false}
      type="text"
    />
    
  </div>
  
  
</div>
`;
